--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fupslot.lodash.extend",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "authors": [
     "Eugene Brodsky <fupslot@gmail.com>"
   ],
@@ -14,7 +14,8 @@
     "vendor",
     "test",
     "tests",
-    "src"
+    "src",
+    "dist/index.html"
   ],
   "dependencies": {
     "lodash": "2.3.0"
