--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fupslot.lodash.extend",
-  "version": "1.0.2",
+  "version": "1.0.3-beta.1",
   "authors": [
     "Eugene Brodsky <fupslot@gmail.com>"
   ],
