--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fupslot.lodash.extend",
-  "version": "1.0.2",
+  "version": "1.0.3-beta.1",
   "description": "Extends lodash library. Adds function for controlling data",
   "main": "./dist/fupslot.lodash.extend.js",
   "dependencies": {
