--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "fupslot.lodash.extend",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Extends lodash library. Adds function for controlling data",
   "main": "./dist/fupslot.lodash.extend.js",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "~2.4.1"  
+  },
   "devDependencies": {
     "grunt-contrib-connect": "~0.7.1",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-uglify": "~0.4.0",
-    "lodash": "~2.4.1"
+    "grunt-contrib-uglify": "~0.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
