--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fupslot.lodash.extend",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "authors": [
     "Eugene Brodsky <fupslot@gmail.com>"
   ],
@@ -16,5 +16,6 @@
     "tests",
     "src",
     "dist/index.html"
+    "dist/lodash.js"
   ]
 }
