--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fupslot.lodash.extend",
   "version": "1.0.10",
-  "description": "Extends lodash library. Adds function for controlling data",
+  "description": "Provides variety of functions for modifying javascript collections",
   "main": "./dist/fupslot.lodash.extend.js",
   "dependencies": {
     "lodash": "~2.4.1"  
